Horizonriver QA20-Mar-2017/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AcctSeed__Alternate_Payee_Name__c</fullName>
        <inlineHelpText>Alternate payee name which can be used to populate the payee field on a cash disbursement.</inlineHelpText>
        <label>Alternate Payee Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_1099_Box__c</fullName>
        <inlineHelpText>Marks default 1099 box for reporting cash disbursements to a 1099 vendor.</inlineHelpText>
        <label>Default 1099 Box</label>
        <picklist>
            <picklistValues>
                <fullName>1. Rents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Royalties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Other Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Federal Tax Withheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Fishing Boat Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Medical Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Nonemployee Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Substitute Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Crop Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Golden Parachute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14. Attorney Proceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15a. Section 409A Deferrals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15b. Section 409A Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16. State Tax Withheld</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Taxpayer_Identification_Number__c</fullName>
        <label>Taxpayer Identification Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__X1099_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marks vendor to report cash disbursements on 1099-Misc form.</inlineHelpText>
        <label>1099 Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CableProvider__c</fullName>
        <label>Cable Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClinicGeneralEmail__c</fullName>
        <label>Clinic General Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Details__c</fullName>
        <formula>FirstName  +  &quot;;&quot; + Email +&quot;;&quot; +  Phone</formula>
        <label>Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAddress2__c</fullName>
        <label>Email Address 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullLegalName__c</fullName>
        <label>Full Legal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Related_Opportunity_is_I_N_M_Billing__c</fullName>
        <formula>IF( (Account.of_IMB_Opportunity__c + Account.of_NMB_Opportunity__c) &gt; 0 , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Related Opportunity is I/N M Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeaseOption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease Option?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrigOrder__c</fullName>
        <label>Orig Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <formula>IF(AND(ISPICKVAL(of_Switches__c, &quot;3&quot;),ISPICKVAL(of_WAPs__c,&quot;4&quot;)),9031.69,
IF(AND(ISPICKVAL(of_Switches__c, &quot;3&quot;),ISPICKVAL(of_WAPs__c,&quot;3&quot;)),8585.04,
IF(AND(ISPICKVAL(of_Switches__c, &quot;3&quot;),ISPICKVAL(of_WAPs__c,&quot;5&quot;)),9478.34,
IF(AND(ISPICKVAL(of_Switches__c, &quot;2&quot;),ISPICKVAL(of_WAPs__c,&quot;4&quot;)),8490.30,
IF(AND(ISPICKVAL(of_Switches__c, &quot;2&quot;),ISPICKVAL(of_WAPs__c,&quot;5&quot;)),8936.95,
8043.65)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_text__c</fullName>
        <label>Purchase Price (text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesID__c</fullName>
        <label>Sales ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sertifi2_0__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SiteName__c</fullName>
        <label>Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SitePhone__c</fullName>
        <label>Site Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Structure__c</fullName>
        <label>Structure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Status__c</fullName>
        <formula>IF(of_Survey_Responses__c = 0, &quot;Not Responded&quot;, 
IF(of_Survey_Responses__c = 1, &quot;Responded&quot;,
IF(of_Survey_Responses__c&gt;1,&quot;Duplicate Responses&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Opportunities__c</fullName>
        <formula>Account.of_Opportunities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Survey_Responses__c</fullName>
        <label># of Survey Responses</label>
        <summaryForeignKey>SurveyResponse__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Switches__c</fullName>
        <label># of Switches</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_WAPs__c</fullName>
        <label># of WAPs</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__Invalid_SendGrid_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid  Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__MassLastStayinTouchRequestDate__c</fullName>
        <inlineHelpText>This is the last updated MassMailer Stay-in-Touch Request Date</inlineHelpText>
        <label>MassMailer Stay-in-Touch Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sendgrid4sf__MassLastStayinTouchSaveDate__c</fullName>
        <inlineHelpText>This is the last Updated MassMailer Stay-in-Touch Save Date</inlineHelpText>
        <label>MassMailer Stay-in-Touch Save Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Last_Requested_On__c</fullName>
        <label>Survey Last Requested On</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts_No_Oppty</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>of_Opportunities__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Contacts - No Oppty</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>Switches</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>of_WAPs__c</columns>
        <filterScope>Everything</filterScope>
        <label>Switches</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>